WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59233
[chromium] Clear out LayerTilerChromium's tiles on lost context
https://bugs.webkit.org/show_bug.cgi?id=59233
Summary
[chromium] Clear out LayerTilerChromium's tiles on lost context
James Robinson
Reported
2011-04-22 14:29:32 PDT
[chromium] Clear out LayerTilerChromium's tiles on lost context
Attachments
Patch
(1.82 KB, patch)
2011-04-22 14:31 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-22 14:31:13 PDT
Created
attachment 90763
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-04-26 16:31:13 PDT
Comment on
attachment 90763
[details]
Patch Looks reasonable to me.
Kenneth Russell
Comment 3
2011-04-26 16:31:49 PDT
Comment on
attachment 90763
[details]
Patch Looks fine to me.
James Robinson
Comment 4
2011-04-26 16:32:25 PDT
Thanks Ken!
James Robinson
Comment 5
2011-04-26 16:51:17 PDT
Comment on
attachment 90763
[details]
Patch Clearing flags on attachment: 90763 Committed
r84981
: <
http://trac.webkit.org/changeset/84981
>
James Robinson
Comment 6
2011-04-26 16:51:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug